# the-slomancer-clone

./: .env  Cargo.toml  export_presets.cfg  icon.svg.import  project.godot  root.tscn  run_godot.rs  rust.gdextension  rust.gdextension.uid  the-slomancer-clone.sln  the_slomancer_clone.csproj  the_slomancer_clone.sln
Assets/: icon.svg.import
Assets/Cursor/Swords_1/: Iicon_32_01.png.import  Iicon_32_02.png.import  Iicon_32_03.png.import  Iicon_32_04.png.import  Iicon_32_05.png.import  Iicon_32_06.png.import  Iicon_32_07.png.import  Iicon_32_08.png.import  Iicon_32_09.png.import  Iicon_32_10.png.import  Iicon_32_11.png.import  Iicon_32_12.png.import  Iicon_32_13.png.import  Iicon_32_14.png.import  Iicon_32_15.png.import  Iicon_32_16.png.import  Iicon_32_17.png.import  Iicon_32_18.png.import  Iicon_32_19.png.import  Iicon_32_20.png.import  Iicon_32_21.png.import  Iicon_32_22.png.import  Iicon_32_23.png.import  Iicon_32_24.png.import  Iicon_32_25.png.import  Iicon_32_26.png.import  Iicon_32_27.png.import  (+13 more)
Assets/swordsman/: Swordsman_lvl1_Idle_front.res.depren  idle.json  idle.png.import
Scenes/: bevy_app_singleton.tscn  main.tscn  sprite.tscn
Scripts/: Root.cs  Root.cs.uid
addons/gdterm/: terminal.gd.uid
addons/rebuild_cs_on_focus/: RebuildCsPlugin.cs  RebuildCsPlugin.cs.uid  RebuildOnFocusUi.cs.uid  plugin.cfg
addons/rust_auto_compile/: plugin.cfg  rust_auto_compile.gd  rust_auto_compile.gd.uid
core/: Cargo.toml
core/proc_macros/src/: lib.rs
core/src/: app.rs  assets.rs  erased_gd.rs  lib.rs  scene.rs  scene_tree.rs
src/: lib.rs  player.rs
(+41 files in other folders)
